--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -11,7 +11,7 @@
         </a>
         <ul>
           <li><a href="{{ '/' | prepend: site.baseurl }}">About</a></li>
-          <li><a href="{{ '/portfolio' | prepend: site.baseurl }}/">Portfolio</a></li>
+          <li><a href="https://eminent-aftermath-b27.notion.site/4f5c6a2084de4f69b7e682fcecc9ffe1">Portfolio</a></li>
         </ul>
     </div>
   </nav>
