--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -174,12 +174,12 @@
 </li>
 {% endif %}
 
-{% if site.social.tumblr %}
+{% if site.social.tistory %}
 <li>
-  <a href="http://{{ site.social.tumblr }}.tumblr.com/" title="{{ site.social.default_txt }} Tumblr">
+  <a href="http://{{ site.social.tistory }}.tistory.com/" title="{{ site.social.default_txt }} Tistory">
     <span class="fa-stack fa-lg">
       <i class="fa fa-circle fa-stack-2x"></i>
-      <i class="fab fa-tumblr fa-stack-1x fa-inverse"></i>
+      <i class="fa fa-newspaper-o fa-stack-1x fa-inverse"></i>
     </span>
   </a>
 </li>
